Fixed retaining text attributes when using 'end' key. b=113613, fix=mjudge, r=blythe, sr=kin